--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Network Analysis in Organizations - Slidev Presentation",
   "scripts": {
     "dev": "slidev",
+    "dev:network": "slidev network-analysis-presentation.md",
+    "dev:pymc": "slidev pymc.md",
     "build": "slidev build",
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.48.0",
-    "@slidev/theme-default": "latest"
+    "@slidev/cli": "^0.49.21",
+    "@slidev/theme-default": "latest",
+    "slidev-theme-neversink": "^0.3.6"
   }
 }
